# llm-cost-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: routing.yaml
dashboard/: app.py
data/: labeled_prompts.json
data/prompts/: baseline_prompts.json  load_test_prompts.json
scripts/: baseline_test.py  generate_labeled_dataset.py  generate_load_test_prompts.py  load_test.py  retrain_classifier.py  train_classifier.py
src/llm_cost_router/: settings.py
src/llm_cost_router/api/: app.py  routes.py  schemas.py
src/llm_cost_router/classifier/: __init__.py  base.py  features.py  heuristic.py  retrain.py  sklearn_classifier.py  train.py
src/llm_cost_router/models/: registry.py  types.py
src/llm_cost_router/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/llm_cost_router/router/: config.py  router.py
src/llm_cost_router/storage/: db.py  failures.py  request_log.py  stats.py
src/llm_cost_router/verification/: verifier.py
tests/: conftest.py  test_api.py  test_build_classifier.py  test_classifier.py  test_dashboard.py  test_failures_storage.py  test_features.py  test_providers.py  test_retrain_classifier.py  test_router.py  test_sklearn_classifier.py  test_stats.py  test_storage.py  test_train_classifier.py  test_verifier.py
